--- a/compas/sass/screen.scss
+++ b/compas/sass/screen.scss
@@ -54,9 +54,6 @@ body {
 	a {
 		font-family: 'open_sanslight', sans-serif;
 	}
-
-
-
 }
 
 .clear {
@@ -260,6 +257,7 @@ section.how-it-works {
 						width: 72px;
 						margin: 25px auto 0 auto;
 						background: url("../gfx/icon_sprites.png") no-repeat;
+						background-position: 0px 0px;
 						}
 
 						h4 {
@@ -275,35 +273,35 @@ section.how-it-works {
 							padding: 0 10px;
 						}
 
-					&:nth-child(1) {
-						span {
-							background-position: 0px 0px;
+						&:nth-child(1) {
+							span {
+								background-position: 0px 0px;
+								}
 							}
-						}
-					&:nth-child(2) {
-						span {
-							background-position: -91px 0px;
+						&:nth-child(2) {
+							span {
+								background-position: -91px 0px;
+								}
 							}
-						}
-					&:nth-child(3) {
-						span {
-							background-position: -182px 0px;
+						&:nth-child(3) {
+							span {
+								background-position: -182px 0px;
+								}
 							}
-						}
-					&:nth-child(4) {
-						span {
-							background-position: -273px 0px;
+						&:nth-child(4) {
+							span {
+								background-position: -273px 0px;
+								}
 							}
-						}
-					&:nth-child(5) {
-						span {
-							background-position: -364px 0px;
+						&:nth-child(5) {
+							span {
+								background-position: -364px 0px;
+								}
 							}
-						}
-					&:nth-child(6) {
-						span {
-							background-position: -452px 0px;
-							}
+						&:nth-child(6) {
+							span {
+								background-position: -452px 0px;
+								}
 						h4 {letter-spacing: 0px;}
 						}
 				 }
@@ -319,69 +317,256 @@ section.portfolio {
 			background-color: #fff;
 
 			h3 {
-				font-size: 5em;
-				margin: 50px 0;
-				color: #7f578b;
+				font-size: 4em;
+				color: #fff;
 				text-align: center;
-
+				background-color: #623171;
+				padding: 50px 0 90px 0;
 			}
 
-			div.row_1, div.row_3 {
-					div {
+			h3:before, h3:after {
+				margin: 0em;
+			}
+
+			div.row_1 {
+				position: relative;
+				border-top: 20px solid #623171;
+					
+					h4 {
+						display: block;
+						background: #623171;
+						padding: 20px 50px; 
+						position: absolute;
+						top: -2px;
+						left: 0;
+						//border: 1px solid #fff;
+					}
+					ul {
+						li {
+							width: 25%;
+							height: 400px;
+							display: inline-block;
+							margin: -2px;
+
+							span {
+								display: block;
+								width: 185px;
+								height: 185px;
+								margin: 0 auto;
+								background: url("../gfx/sprites_logo_1.png") no-repeat;
+								@include vertical-align;
+							}
+
+							&:nth-child(1) {
+							background-color: #f5f5f5;
+								span {
+								background-position: 0px 0px;	
+								}
+							}
+							&:nth-child(2) {
+							background-color: #f1f1f1;
+								span {
+								background-position: -187px 0px;	
+								}
+							}
+							&:nth-child(3) {
+							background-color: #eaeaea;
+								span {
+								background-position: -374px 0px;	
+								}
+							}
+							&:nth-child(4) {
+							background-color: #d8d8d8;
+							span {
+								background-position: -563px 0px;	
+								}
+							}
+						}
+					}
+			}
+
+			div.row_2 {
+				position: relative;
+				border-top: 20px solid #623171;
+
+					h4 {
+						display: block;
+						background: #623171;
+						padding: 20px 50px; 
+						position: absolute;
+						top: -2px;
+						right: 0;
+						//border: 1px solid #fff;
+					}
+
+					li {
 						width: 25%;
 						height: 400px;
 						display: inline-block;
 						margin: -2px;
-						&:nth-child(1) {
-						background-color: #f5f5f5;
-						}
-						&:nth-child(2) {
-						background-color: #f1f1f1;
-						}
-						&:nth-child(3) {
-						background-color: #eaeaea;
-						}
-						&:nth-child(4) {
-						background-color: #d8d8d8;
-						}
-					}
 
-					img {
-						margin: 0 25%;
-						@include vertical-align;
-					}
-			}
+						span {
+							display: block;
+							width: 185px;
+							height: 185px;
+							margin: 0 auto;
+							background: url("../gfx/sprites_logo_1.png") no-repeat;
+							@include vertical-align;
+						}
 
-			div.row_2, div.row_4 {
-					div {
-						width: 25%;
-						height: 400px;
-						display: inline-block;
-						margin: -2px;
 						&:nth-child(1) {
 						background-color: #d8d8d8;
+							span {
+								background-position: -752px 0px;	
+								}
 						}
 						&:nth-child(2) {
 						background-color: #eaeaea;
+							span {
+								background-position: -939px 0px;	
+								}
 						}
 						&:nth-child(3) {
 						background-color: #f1f1f1;
+							span {
+								background-position: -1127px 0px;	
+								}
 						}
 						&:nth-child(4) {
 						background-color: #f5f5f5;
-						}
-					}
-
-					img {
-						margin: 0 25%;
-						@include vertical-align;
+							span {
+								background-position: -1314px 0px;	
+								}
+						}					
 					}		
 			}
+
+				div.row_3 {
+				position: relative;
+				border-top: 20px solid #623171;
+					
+					h4 {
+						display: block;
+						background: #623171;
+						padding: 20px 50px; 
+						position: absolute;
+						top: -2px;
+						left: 0;
+						//border: 1px solid #fff;
+					}
+
+					li {
+						width: 25%;
+						height: 400px;
+						display: inline-block;
+						margin: -2px;
+
+						span {
+							display: block;
+							width: 185px;
+							height: 185px;
+							margin: 0 auto;
+							background: url("../gfx/sprites_logo_1.png") no-repeat;
+							@include vertical-align;
+						}
+
+						&:nth-child(1) {
+						background-color: #f5f5f5;
+							span {
+								background-position: -1504px 0px;	
+								}
+						}
+						&:nth-child(2) {
+						background-color: #f1f1f1;
+							span {
+								background-position: -1684px 0px;	
+								}
+						}
+						&:nth-child(3) {
+						background-color: #eaeaea;
+							span {
+								background-position: -1874px 0px;	
+								}
+						}
+						&:nth-child(4) {
+						background-color: #d8d8d8;
+							span {
+								background-position: -2053px 0px;	
+								}
+						}
+						&:nth-child(5) {
+						background-color: #d8d8d8;
+							span {
+								background-position: -1504px 0px;	
+								}
+						}
+						&:nth-child(6) {
+						background-color: #eaeaea;
+							span {
+								background-position: -1684px 0px;	
+								}
+						}
+						&:nth-child(7) {
+						background-color: #f1f1f1;
+							span {
+								background-position: -1874px 0px;	
+								}
+						}
+						&:nth-child(8) {
+						background-color: #f5f5f5;
+							span {
+								background-position: -2053px 0px;	
+								}
+						}		
+					}
+			}
+
+
+			aside#popup {
+    background: rgba(255,255,255, 0.6);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    display: none;
 }
-			
 
 
+/* aside#kontakt .kontakt-inner {
+    position: absolute;
+    background: #fff; 
+    width: 600px;
+    height: auto;
+    top: 100px;
+    right: 0;
+    left: 0;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    display: block;
+    margin: 0 auto;
+    padding: 20px;
+    text-align: center;
 
+			.close {
+			    position: absolute;
+			    right: 25px;
+			}
+
+			img {
+			    height: 200px;    
+
+			}
+
+			form input[type="email"] {
+			    display: block;
+			    margin: 20px auto;
+			    border: 1px solid #ff7900;
+			    padding: 5px;
+			    width: 300px;
+    
+} */
+
+}
 
 
 
