--- a/compas/sass/screen.scss
+++ b/compas/sass/screen.scss
@@ -16,18 +16,6 @@ fiolet(tło) - #7f578b;
 /* import, mixiny, reusable*/
 @import "compass/reset/";
 
-@font-face {
-    font-family: 'open_sanslight';
-    src: url('../assets/OpenSans-Light-webfont.eot');
-    src: url('../assets/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../assets/OpenSans-Light-webfont.woff') format('woff'),
-         url('../assets/OpenSans-Light-webfont.ttf') format('truetype'),
-         url('../assets/OpenSans-Light-webfont.svg#open_sanslight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
 @mixin vertical-align {
     position: relative;
     top: 50%;
@@ -47,12 +35,12 @@ body {
 	}
 
 	p {
-		font-family: 'open_sanslight', sans-serif;
+		font-family: 'Open Sans', sans-serif;
 		padding: 0 5px;
 	}
 
 	a {
-		font-family: 'open_sanslight', sans-serif;
+		font-family: 'Open Sans', sans-serif;
 	}
 }
 
@@ -131,7 +119,6 @@ section.main {
 		h2 {
 
 			font-size: 1.5em;
-			font-weight: 400;
 			line-height: 150%;
 			margin-bottom: 100px;
 			padding: 0 20%;
@@ -148,7 +135,7 @@ section.main {
 			font-size: 1.3em;
 			text-decoration: none;
 			text-transform: uppercase;
-			font-weight: 300px;
+			font-weight: 100;
 			color: #fff;
 			border: 1px #fff solid;
 			border-radius: 10px;
@@ -213,7 +200,7 @@ section.how-it-works {
 			font-size: 1em;
 			text-decoration: none;
 			text-transform: uppercase;
-			font-weight: 300px;
+			font-weight: 100;
 			color: #fff;
 			border: 1px #fff solid;
 			border-radius: 10px;
@@ -231,7 +218,7 @@ section.how-it-works {
 
 			.flex-container {
 				position: relative;
-				margin: 0 auto;
+				//margin: 0;
 				list-style: none;
 				  
 				display: -webkit-box;
@@ -241,21 +228,21 @@ section.how-it-works {
 				display: flex;
 				  
 				-webkit-flex-flow: row wrap;
-				justify-content: space-around;
+				//justify-content: space-around;
 
 				.flex-item {
-					padding: 5px;
+					//padding: 5px;
 					width: 16.66%;
 					height: 220px;
 					margin-top: 10px;
-					text-align: center;
+					text-align: left;
 					
 
 						span {
 						display: block;
 						height: 27px;
 						width: 72px;
-						margin: 25px auto 0 auto;
+						margin: 25px 0 0 0;
 						background: url("../gfx/icon_sprites.png") no-repeat;
 						background-position: 0px 0px;
 						}
@@ -270,7 +257,7 @@ section.how-it-works {
 						p {
 							font-size: 1em;
 							line-height: 150%;
-							padding: 0 10px;
+							padding: 0 40px 0 0;
 						}
 
 						&:nth-child(1) {
@@ -313,8 +300,10 @@ section.how-it-works {
 section.portfolio {
 			position: relative;
 			min-height: 740px;
-			width: 100%;
+			width: 100%;	
 			background-color: #fff;
+			float: left;
+
 
 			h3 {
 				font-size: 4em;
@@ -328,25 +317,38 @@ section.portfolio {
 				margin: 0em;
 			}
 
-			div.row_1 {
+			div.row {
+				&:last-child {
+					border-bottom: 10px solid #623171;
+				}
 				position: relative;
-				border-top: 20px solid #623171;
-					
-					h4 {
+				border-top: 10px solid #623171;
+				width: 100%;
+				float: left;
+				
+				&:before {
+					clear: both;
+				}
+
+				h4 {
 						display: block;
 						background: #623171;
 						padding: 20px 50px; 
 						position: absolute;
 						top: -2px;
+					&.row_1, &.row_3 {
 						left: 0;
-						//border: 1px solid #fff;
 					}
-					ul {
-						li {
+					&.row_2 {
+						right: 0;
+					}
+				}
+
+				ul {
+					li {
 							width: 25%;
 							height: 400px;
-							display: inline-block;
-							margin: -2px;
+							float: left;
 
 							span {
 								display: block;
@@ -356,7 +358,15 @@ section.portfolio {
 								background: url("../gfx/sprites_logo_1.png") no-repeat;
 								@include vertical-align;
 							}
+					}
 
+
+				}
+
+
+					ul.row_1 {
+						li {
+							
 							&:nth-child(1) {
 							background-color: #f5f5f5;
 								span {
@@ -383,36 +393,9 @@ section.portfolio {
 							}
 						}
 					}
-			}
-
-			div.row_2 {
-				position: relative;
-				border-top: 20px solid #623171;
-
-					h4 {
-						display: block;
-						background: #623171;
-						padding: 20px 50px; 
-						position: absolute;
-						top: -2px;
-						right: 0;
-						//border: 1px solid #fff;
-					}
-
-					li {
-						width: 25%;
-						height: 400px;
-						display: inline-block;
-						margin: -2px;
-
-						span {
-							display: block;
-							width: 185px;
-							height: 185px;
-							margin: 0 auto;
-							background: url("../gfx/sprites_logo_1.png") no-repeat;
-							@include vertical-align;
-						}
+					
+					ul.row_2 {
+						li {
 
 						&:nth-child(1) {
 						background-color: #d8d8d8;
@@ -437,38 +420,13 @@ section.portfolio {
 							span {
 								background-position: -1314px 0px;	
 								}
-						}					
-					}		
-			}
-
-				div.row_3 {
-				position: relative;
-				border-top: 20px solid #623171;
-					
-					h4 {
-						display: block;
-						background: #623171;
-						padding: 20px 50px; 
-						position: absolute;
-						top: -2px;
-						left: 0;
-						//border: 1px solid #fff;
-					}
-
-					li {
-						width: 25%;
-						height: 400px;
-						display: inline-block;
-						margin: -2px;
-
-						span {
-							display: block;
-							width: 185px;
-							height: 185px;
-							margin: 0 auto;
-							background: url("../gfx/sprites_logo_1.png") no-repeat;
-							@include vertical-align;
+							}					
 						}
+					}
+					
+					ul.row_3 {
+
+						li {
 
 						&:nth-child(1) {
 						background-color: #f5f5f5;
@@ -494,42 +452,82 @@ section.portfolio {
 								background-position: -2053px 0px;	
 								}
 						}
-						&:nth-child(5) {
-						background-color: #d8d8d8;
-							span {
-								background-position: -1504px 0px;	
-								}
-						}
-						&:nth-child(6) {
-						background-color: #eaeaea;
-							span {
-								background-position: -1684px 0px;	
-								}
-						}
-						&:nth-child(7) {
-						background-color: #f1f1f1;
-							span {
-								background-position: -1874px 0px;	
-								}
-						}
-						&:nth-child(8) {
-						background-color: #f5f5f5;
-							span {
-								background-position: -2053px 0px;	
-								}
-						}		
-					}
+					}		
+				}
+			
+	}	
+}
+
+
+	section.team {
+		position: relative;
+		min-height: 100%;
+		width: 100%;
+		padding-top: 70px;
+		background: #faf1e2 url("../gfx/team.jpg") no-repeat 47% 50%;
+		background-size: 40%;
+
+		h3 {
+				font-family: 'Open Sans', sans-serif;
+				font-size: 2.25em;
+				letter-spacing: 2px;
+				color: #000;
+				text-align: center;
+				margin-bottom: 20px;
+
 			}
 
+			p {
+				text-align: center;
+				color: #000;
+				font-size: 1.25em;
+				letter-spacing: 2px;
+				text-align: center;
+				color: #000;
+				margin-bottom: 50px;
 
-			aside#popup {
+			}
+			a.main-button {
+			position: absolute;
+			margin: 0 auto;
+			left: 0;
+			right: 0;
+			bottom: 50px;
+			width: 160px;
+
+			-webkit-transition: background .3s ease-in-out;
+			-moz-transition: background .3s ease-in-out;
+			-ms-transition: background .3s ease-in-out;
+			-o-transition: background .3s ease-in-out;
+			transition: background .3s ease-in-out;
+			font-size: 1.2em;
+			text-decoration: none;
+			text-transform: uppercase;
+			text-align: center;
+			line-height: 120%;
+			color: #000;
+			border: 1px #000 solid;
+			border-radius: 10px;
+			padding: 10px 25px;
+
+			&:hover {
+					background-color: rgba(0,0,0,.1);
+				}
+			}
+		
+
+}
+
+
+
+/*	aside#popup {
     background: rgba(255,255,255, 0.6);
     width: 100%;
     height: 100%;
     position: fixed;
     top: 0;
     display: none;
-}
+} */
 
 
 /* aside#kontakt .kontakt-inner {
@@ -565,8 +563,6 @@ section.portfolio {
 			    width: 300px;
     
 } */
-
-}
 
 
 
